5.1.2009
      - create more than one rest instead of dotted rest
      (tb)
      - updating Dutch translation by Jaap Plaisier
4.1.2009 (ws)
      - after loading of new score "cs" (currentScore) was not always set
        which crashes mscore
31.dec (ws)
      - fixed copy/paste of tuplets
      - updated russian translation from Alexandre Prokoudine
      - copy/paste of lyrics and chord symbols in passages
30.dec (ws)
      - fixed copy/paste lyrics and chord symbols
      - fix crash when starting empty and then create new score
      (db)
      - new PDFs for handbook (all six languages)
29.dec (ws)
      - new style parameter: begin repeat barline left margin
      - default drummap can now be defined in instrument template file "instruments.xml"
        for every instrument; look for instrument "triangle"
      - edit drum map: complete implementation of shortcuts
28.dec (ws)
      - changed handling of drums
      (db)
      - new PDF for English handbook
26.dec (ws)
      - allow tuplet entry with midi keyboard
      - Fix bug when changing time signature (4/4->3/4 + undo)
23.dec (ws)
      - fix printing of multi measure rests
      (olavgun)
      - lilypond export of longa and brevis, and of dynamic signs "sff"
         and "crescendo".
22.dec (ws)
      - update text elements after changing text style
        (does not work for lyrics for yet unknown reasons)
      (tb)
      - updating Dutch translation by Jaap Plaisier
20.dec (ws)
      - new measure property: break multi measure rest
      - first experimental implementation of "multi measure rests".
19.dec (ws)
      - fixed crash when undo delete bracket
      - right align system brackets
      - fixed crash when moving system brackets
      - renamed template files replacing "_" with " "
      (la)
      - correct issue on full measure rest in musicXML export
      - improve support of octave-shift in musicXML import
      (db)