@@ -1033,29 +1033,6 @@ void Harmony::endEdit()
       }
 
 //---------------------------------------------------------
-//   dragAnchor
-//---------------------------------------------------------
-
-QLineF Harmony::dragAnchor() const
-      {
-      QPointF cp = canvasPos();
-      QPointF anchor = cp - (userOff() * _spatium);
-      return QLineF(cp, anchor);
-      }
-
-//---------------------------------------------------------
-//   layout
-//---------------------------------------------------------
-
-void Harmony::layout(ScoreLayout* l)
-      {
-      Text::layout(l);
-      double y = track() != -1 ? measure()->system()->staff(track() / VOICES)->y() : 0.0;
-      double x = (tick() != -1) ? measure()->tick2pos(tick()) : 0.0;
-      setPos(ipos() + QPointF(x, y));
-      }
-
-//---------------------------------------------------------
 //   text
 //---------------------------------------------------------
 
