@@ -39,8 +39,8 @@ class TempoText : public Text  {
       virtual void read(QDomElement);
       virtual bool genPropertyMenu(QMenu*) const;
       virtual void propertyAction(const QString&);
-      virtual void layout(ScoreLayout*);
-      QLineF dragAnchor() const;
+//      virtual void layout(ScoreLayout*);
+//      QLineF dragAnchor() const;
       Measure* measure() const { return (Measure*)parent(); }
       double tempo() const     { return _tempo; }
       void setTempo(double v)  { _tempo = v; }
